[gd_scene load_steps=52 format=2]

[ext_resource path="res://tiles/warningFrame.png" type="Texture" id=1]
[ext_resource path="res://ButtonItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://buttons/cancel.png" type="Texture" id=3]
[ext_resource path="res://menuTheme.tres" type="Theme" id=4]
[ext_resource path="res://tiles/PopupMenuTheme.tres" type="Theme" id=5]
[ext_resource path="res://gamepad/gamepad_P.png" type="Texture" id=6]
[ext_resource path="res://fonts/SWAP_12_Regular.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/SWAP_12_Bold.tres" type="DynamicFont" id=8]
[ext_resource path="res://PopupPanel.gd" type="Script" id=9]
[ext_resource path="res://gamepad/gamepad_U.png" type="Texture" id=10]
[ext_resource path="res://gamepad/gamepad_D.png" type="Texture" id=11]
[ext_resource path="res://gamepad/gamepad_R.png" type="Texture" id=12]
[ext_resource path="res://gamepad/gamepad_B.png" type="Texture" id=13]
[ext_resource path="res://gamepad/gamepad_A.png" type="Texture" id=14]
[ext_resource path="res://KeyConfig.gd" type="Script" id=15]
[ext_resource path="res://fonts/decorative_big.tres" type="DynamicFont" id=16]
[ext_resource path="res://tiles/tab_button_theme.tres" type="Theme" id=17]
[ext_resource path="res://icons/keyboard5.png" type="Texture" id=18]
[ext_resource path="res://icons/keyboard7.png" type="Texture" id=19]
[ext_resource path="res://icons/keyboard2.png" type="Texture" id=20]
[ext_resource path="res://icons/keyboard4.png" type="Texture" id=21]
[ext_resource path="res://icons/keyboard0.png" type="Texture" id=22]
[ext_resource path="res://icons/keyboard3.png" type="Texture" id=23]
[ext_resource path="res://icons/keyboard6.png" type="Texture" id=24]
[ext_resource path="res://icons/keyboard8.png" type="Texture" id=25]
[ext_resource path="res://icons/keyboard1.png" type="Texture" id=26]
[ext_resource path="res://icons/gamepad0003.png" type="Texture" id=27]
[ext_resource path="res://icons/gamepad0005.png" type="Texture" id=28]
[ext_resource path="res://icons/gamepad0007.png" type="Texture" id=29]
[ext_resource path="res://icons/gamepad0000.png" type="Texture" id=30]
[ext_resource path="res://icons/gamepad0002.png" type="Texture" id=31]
[ext_resource path="res://icons/gamepad0004.png" type="Texture" id=32]
[ext_resource path="res://icons/gamepad0001.png" type="Texture" id=33]
[ext_resource path="res://icons/gamepad0008.png" type="Texture" id=34]
[ext_resource path="res://icons/gamepad0006.png" type="Texture" id=35]
[ext_resource path="res://buttons/exit_active.png" type="Texture" id=36]
[ext_resource path="res://buttons/exit_normal.png" type="Texture" id=37]
[ext_resource path="res://buttons/load_active.png" type="Texture" id=38]
[ext_resource path="res://buttons/save_pressed.png" type="Texture" id=39]
[ext_resource path="res://buttons/load_pressed.png" type="Texture" id=40]
[ext_resource path="res://buttons/load_normal.png" type="Texture" id=41]
[ext_resource path="res://buttons/exit_pressed.png" type="Texture" id=42]
[ext_resource path="res://buttons/save_active.png" type="Texture" id=43]
[ext_resource path="res://buttons/save_normal.png" type="Texture" id=44]
[ext_resource path="res://gamepad/gamepad_invert.png" type="Texture" id=45]
[ext_resource path="res://icons/bool_off.png" type="Texture" id=47]
[ext_resource path="res://tiles/boxInactive.stylebox" type="StyleBox" id=48]
[ext_resource path="res://icons/bool_on.png" type="Texture" id=49]

[sub_resource type="AnimatedTexture" id=1]
frames = 9
fps = 5.0
frame_0/texture = ExtResource( 22 )
frame_0/delay_sec = 0.25
frame_1/texture = ExtResource( 26 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 20 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 23 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 21 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 18 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 24 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 19 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 25 )
frame_8/delay_sec = 0.0

[sub_resource type="GDScript" id=2]
script/source = "extends PanelContainer
export var option_name: String
export var option_help: String
export var option_checked: bool
var is_key_config_item = true

signal setting_bool_changed(name, checked)
# Called when the node enters the scene tree for the first time.
func _ready():
	$HBoxContainer/VBoxContainer/Name.text = option_name
	if option_help == \"\":
		$HBoxContainer/VBoxContainer/Help.hide()
	else:
		$HBoxContainer/VBoxContainer/Help.text = option_help

func _gui_input(event):
	if event.is_action_pressed(\"ui_up\"):
		var neighbor = get_parent().get_child(get_index() - 1)
		if is_instance_valid(neighbor) and \"is_key_config_item\" in neighbor:
			neighbor.find_node(\"Remap\", true).grab_focus()
			accept_event()

func _on_CheckButton_toggled(button_pressed):
	if find_parent(\"SettingsMenuRoot\"):
		find_parent(\"SettingsMenuRoot\").on_bool(button_pressed)
	set_value(button_pressed)
	emit_signal(\"option_checked\", option_name, option_checked)

func set_value(checked):
	$HBoxContainer/CheckButton.set_pressed(checked)
	print(\"set_value on checkbutton fired. value is \", checked	)
	option_checked = checked

func get_value():
	print(\"get_value on checkbutton fired. value is \", option_checked)
	return option_checked

func reload_font(fonts):
	print(\"reloading font in type bool\")
	$HBoxContainer/VBoxContainer/Name.set(\"custom_fonts/font\", null)
	$HBoxContainer/VBoxContainer/Name.set(\"custom_fonts/font\", fonts[0])
	$HBoxContainer/VBoxContainer/Help.set(\"custom_fonts/font\", null)
	$HBoxContainer/VBoxContainer/Help.set(\"custom_fonts/font\", fonts[2])
	pass
"

[sub_resource type="AnimatedTexture" id=3]
frames = 9
fps = 5.0
frame_0/texture = ExtResource( 30 )
frame_0/delay_sec = 0.25
frame_1/texture = ExtResource( 33 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 31 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 27 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 32 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 28 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 35 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 29 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 34 )
frame_8/delay_sec = 0.0

[node name="KeyConfig" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -320.0
margin_right = 180.0
margin_bottom = 320.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_right = 180.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
theme = ExtResource( 4 )
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 360.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 16 )
text = "I18N_KEY_CONFIG"
align = 1
valign = 2
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 360.0
margin_bottom = 92.0
size_flags_horizontal = 3
follow_focus = true
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageSelect" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 500.0
margin_bottom = 32.0
size_flags_horizontal = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/PageSelect"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 3

[node name="KeyButton" type="Button" parent="VBoxContainer/ScrollContainer/PageSelect"]
margin_left = 40.0
margin_right = 251.797
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
theme = ExtResource( 17 )
text = "I18N_KEYBOARD"

[node name="GamepadButton" type="Button" parent="VBoxContainer/ScrollContainer/PageSelect"]
margin_left = 259.0
margin_right = 460.828
margin_bottom = 32.0
theme = ExtResource( 17 )
text = "I18N_GAMEPAD"

[node name="Control2" type="Control" parent="VBoxContainer/ScrollContainer/PageSelect"]
margin_left = 468.0
margin_right = 500.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 360.0
margin_bottom = 572.0
size_flags_vertical = 3
theme = ExtResource( 5 )
tabs_visible = false
use_hidden_tabs_for_min_size = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="I18N_KEYBOARD" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
follow_focus = true

[node name="v" type="VBoxContainer" parent="VBoxContainer/TabContainer/I18N_KEYBOARD"]
margin_right = 320.0
margin_bottom = 665.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v"]
margin_right = 320.0
margin_bottom = 64.0

[node name="Texture" type="TextureRect" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v/CenterContainer"]
margin_left = 96.0
margin_right = 224.0
margin_bottom = 64.0
grow_horizontal = 2
texture = SubResource( 1 )

[node name="I18N_MOVE_LEFT" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 136.0

[node name="I18N_MOVE_RIGHT" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 320.0
margin_bottom = 208.0
action_name = "I18N_MOVE_RIGHT"
texture = ExtResource( 12 )

[node name="I18N_ROTATE_LEFT" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 320.0
margin_bottom = 280.0
action_name = "I18N_ROTATE_LEFT"
texture = ExtResource( 13 )

[node name="I18N_ROTATE_RIGHT" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 280.0
margin_right = 320.0
margin_bottom = 352.0
action_name = "I18N_ROTATE_RIGHT"
texture = ExtResource( 14 )

[node name="I18N_SOFT_DROP" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 352.0
margin_right = 320.0
margin_bottom = 424.0
action_name = "I18N_SOFT_DROP"
texture = ExtResource( 11 )

[node name="I18N_HARD_DROP" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 424.0
margin_right = 320.0
margin_bottom = 496.0
action_name = "I18N_HARD_DROP"
texture = ExtResource( 10 )

[node name="I18N_PAUSE" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 496.0
margin_right = 320.0
margin_bottom = 568.0
focus_neighbour_bottom = NodePath("../../../../CenterContainer/HBoxContainer2/SaveButton")
action_name = "I18N_PAUSE"
texture = ExtResource( 6 )

[node name="placeholder" type="PanelContainer" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v"]
margin_top = 568.0
margin_right = 320.0
margin_bottom = 665.0
size_flags_horizontal = 3
size_flags_vertical = 12
theme = ExtResource( 5 )
custom_styles/panel = ExtResource( 48 )
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
option_name = "I18N_AB_INV"
option_help = "I18N_AB_INV_HELP"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v/placeholder"]
margin_left = 10.0
margin_top = 4.0
margin_right = 310.0
margin_bottom = 93.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v/placeholder/HBoxContainer"]
margin_right = 32.0
margin_bottom = 89.0
texture = ExtResource( 45 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v/placeholder/HBoxContainer"]
margin_left = 40.0
margin_right = 228.0
margin_bottom = 89.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v/placeholder/HBoxContainer/VBoxContainer"]
margin_right = 188.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 0.376471 )
text = "I18N_AB_INV"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Label" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v/placeholder/HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 188.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 0.313726 )
text = "I18N_AB_INV_HELP"
autowrap = true

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/TabContainer/I18N_KEYBOARD/v/placeholder/HBoxContainer"]
margin_left = 236.0
margin_right = 300.0
margin_bottom = 32.0
grow_vertical = 2
mouse_filter = 1
size_flags_vertical = 0
theme = ExtResource( 5 )
custom_icons/off = ExtResource( 47 )
custom_icons/on_disabled = ExtResource( 49 )
custom_icons/on = ExtResource( 49 )
custom_icons/off_disabled = ExtResource( 47 )
disabled = true
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
align = 2

[node name="I18N_GAMEPAD" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="v" type="VBoxContainer" parent="VBoxContainer/TabContainer/I18N_GAMEPAD"]
margin_right = 344.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v"]
margin_right = 452.0
margin_bottom = 64.0

[node name="Texture" type="TextureRect" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v/CenterContainer"]
margin_left = 162.0
margin_right = 290.0
margin_bottom = 64.0
grow_horizontal = 2
texture = SubResource( 3 )

[node name="I18N_MOVE_LEFT" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 452.0
margin_bottom = 160.0
focus_neighbour_top = NodePath("../..")
gamepad = true

[node name="I18N_MOVE_RIGHT" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 160.0
margin_right = 452.0
margin_bottom = 256.0
action_name = "I18N_MOVE_RIGHT"
gamepad = true
texture = ExtResource( 12 )

[node name="I18N_ROTATE_LEFT" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 256.0
margin_right = 452.0
margin_bottom = 352.0
action_name = "I18N_ROTATE_LEFT"
gamepad = true
texture = ExtResource( 13 )

[node name="I18N_ROTATE_RIGHT" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 352.0
margin_right = 452.0
margin_bottom = 448.0
action_name = "I18N_ROTATE_RIGHT"
gamepad = true
texture = ExtResource( 14 )

[node name="I18N_SOFT_DROP" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 448.0
margin_right = 452.0
margin_bottom = 544.0
action_name = "I18N_SOFT_DROP"
gamepad = true
texture = ExtResource( 11 )

[node name="I18N_HARD_DROP" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 544.0
margin_right = 452.0
margin_bottom = 640.0
action_name = "I18N_HARD_DROP"
gamepad = true
texture = ExtResource( 10 )

[node name="I18N_PAUSE" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 640.0
margin_right = 452.0
margin_bottom = 736.0
action_name = "I18N_PAUSE"
gamepad = true
texture = ExtResource( 6 )

[node name="I18N_AB_INV" type="PanelContainer" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v"]
margin_top = 736.0
margin_right = 452.0
margin_bottom = 802.0
focus_neighbour_top = NodePath("../I18N_PAUSE")
size_flags_horizontal = 3
size_flags_vertical = 12
theme = ExtResource( 5 )
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
option_name = "I18N_AB_INV"
option_help = "I18N_AB_INV_HELP"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV"]
margin_left = 12.0
margin_top = 4.0
margin_right = 440.0
margin_bottom = 62.0

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV/HBoxContainer"]
margin_right = 32.0
margin_bottom = 58.0
texture = ExtResource( 45 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV/HBoxContainer"]
margin_left = 40.0
margin_right = 356.0
margin_bottom = 58.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="Name" type="Label" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV/HBoxContainer/VBoxContainer"]
margin_right = 316.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Setting name"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Label" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV/HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 316.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 0.752941 )
text = "Help text (optional)"
autowrap = true

[node name="Remap" type="CheckButton" parent="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV/HBoxContainer"]
margin_left = 364.0
margin_right = 428.0
margin_bottom = 58.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource( 5 )
flat = true

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 572.0
margin_right = 360.0
margin_bottom = 576.0
rect_min_size = Vector2( 4, 4 )
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 360.0
margin_bottom = 640.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 36.0
margin_right = 324.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
custom_constants/separation = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="VBoxContainer/CenterContainer/HBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 42 )
texture_hover = ExtResource( 36 )
texture_focused = ExtResource( 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="TextureButton" parent="VBoxContainer/CenterContainer/HBoxContainer2"]
margin_left = 112.0
margin_right = 176.0
margin_bottom = 64.0
texture_normal = ExtResource( 41 )
texture_pressed = ExtResource( 40 )
texture_hover = ExtResource( 38 )
texture_focused = ExtResource( 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="TextureButton" parent="VBoxContainer/CenterContainer/HBoxContainer2"]
margin_left = 224.0
margin_right = 288.0
margin_bottom = 64.0
texture_normal = ExtResource( 44 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 43 )
texture_focused = ExtResource( 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkBG" type="ColorRect" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.752941 )

[node name="NinePatchRect" type="NinePatchRect" parent="PopupPanel/DarkBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ColorRect" type="ColorRect" parent="PopupPanel/DarkBG/NinePatchRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/DarkBG/NinePatchRect/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingTop" type="Control" parent="PopupPanel/DarkBG/NinePatchRect/ColorRect/VBoxContainer"]
margin_right = 296.0
margin_bottom = 123.0
size_flags_vertical = 3

[node name="Press" type="Label" parent="PopupPanel/DarkBG/NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 131.0
margin_right = 296.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "I18N_PRESS_KEY"
align = 1
autowrap = true

[node name="Cancel" type="Label" parent="PopupPanel/DarkBG/NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 152.0
margin_right = 296.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "I18N_CANCEL_KEY"
align = 1
autowrap = true

[node name="PaddingBottom" type="Control" parent="PopupPanel/DarkBG/NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 173.0
margin_right = 296.0
margin_bottom = 296.0
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="PopupPanel/DarkBG/NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ScrollContainer/PageSelect/KeyButton" to="." method="_on_KeyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/PageSelect/GamepadButton" to="." method="_on_GamepadButton_pressed"]
[connection signal="setting_bool_changed" from="VBoxContainer/TabContainer/I18N_KEYBOARD/v/placeholder" to="." method="_on_I18N_AB_INV_setting_bool_changed"]
[connection signal="setting_bool_changed" from="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV" to="." method="_on_I18N_AB_INV_setting_bool_changed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV/HBoxContainer/Remap" to="VBoxContainer/TabContainer/I18N_GAMEPAD/v/I18N_AB_INV" method="_on_CheckButton_toggled"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer2/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer2/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer2/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="PopupPanel/DarkBG/NinePatchRect/TextureButton" to="PopupPanel" method="_on_TextureButton_pressed"]
